<resources>
    <string name="app_name" translatable="false">RightsApp</string>
    <string name="country">Country</string>
    <string name="preference_file_key" translatable="false">cat.uab.idt.rightsapp.preferences</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="title_activity_terms_and_conditions">Terms and conditions</string>
    <string name="terms_and_conditions_appOwnership_title">Ownership of the app</string>
    <string name="terms_and_conditions_appOwnership_body">This app is operated by Universitat Autonoma de Barcelona - Institute of Law and Technology (hereinafter, UAB-IDT) on behalf of the RightsApp consortium. UAB-IDT is located at:\nUniversitat Autònoma de Barcelona - Institute of Law and Technology (UAB-IDT)\nidt@uab.cat\nCampus de la UAB. Edifici B\nCerdanyola del Valles (Bellaterra), Spain\n</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_body">The RightsApp app (hereinafter, the app) is the main outcome of the DG-Justice funded project “RightsApp: Mobile Technologies applied to protect victims of a crime within the EU Area of Justice: RightsApp for e-Justice” (hereinafter RightsApp), which has received funding from the DG-Justice European Union’s Programme (2014-2020) under Grant Agreement No. 785854.\nThe app falls under the responsibility of the RightsApp consortium. It is not concerned with commercial transactions or with the exchange of data for marketing purposes. Whereas we endeavour to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the app, or the information, products, services, or related graphics contained into the app for any purpose. The information in this app is provided “as is”, and no guarantee or warranty is given that the information is fit for any particular purpose. The user thereof uses the information at its sole risk and liability.\nIt is our goal to minimize disruption caused by technical errors. However, some data or information on our site may have been created or structured in files or formats that are not error-free and depending on third-party tasks and/or work, therefore, we cannot guarantee that our service will not be interrupted or otherwise affected by such problems. The RightsApp consortium accepts no responsibility regarding the use of linked external sites.\n</string>
    <string name="terms_and_conditions_privacyPolicy_title">Privacy Policy</string>
    <string name="terms_and_conditions_privacyPolicy_body">Welcome to our Privacy Policy. Your privacy is critically important to us.\nIt is UAB-IDT\'s policy to respect your privacy regarding any information we may collect while operating our app. This Privacy Policy applies to RightsApp mobile application (hereinafter, the "app"). We respect your privacy and are committed to protecting personally identifiable information and personal data you may provide us through the app. We have adopted this privacy policy ("Privacy Policy") to explain what information may be collected on our app, how we use this information, and under what circumstances we may disclose the information to third parties. This Privacy Policy, together with the Terms and conditions posted above, set forth the general rules and policies governing your use of our app.\n</string>
    <string name="terms_and_conditions_personalData_title">Personal Data</string>
    <string name="terms_and_conditions_personalData_body">While using our app, we will not ask you to provide us with any personally identifiable information that can be used to contact or identify you (“Personal Data”). UAB-IDT may collect statistics about the behaviour of visitors to the app, as explained below.\n</string>
    <string name="terms_and_conditions_links_title">Links To External Sites</string>
    <string name="terms_and_conditions_links_body">Our Service may contain links to external sites that are not operated by us. If you click on a third-party link, you will be directed to that third party\'s site. We strongly advise you to review the Privacy Policy and Terms and Conditions of every site you visit. We have no control over, and assume no responsibility for the content, privacy policies or practices of any third-party sites, products or services.\n</string>
    <string name="terms_and_conditions_statistics_title">Aggregated Statistics</string>
    <string name="terms_and_conditions_statistics_body">UAB-IDT may collect statistics about the behaviour of visitors to its app. UAB-IDT may display this information publicly or provide it to others. However, UAB-IDT does not disclose your personally-identifying information and statistics will be displayed or provided in a completely anonymised manner.\n</string>
    <string name="terms_and_conditions_GA_title">Google Analytics</string>
    <string name="terms_and_conditions_GA_body">This app uses functions of Google Analytics of Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States, which support interest-based advertising and advertising based on user browsing behaviour. Google Analytics uses a third-party cookie from DoubleClick to evaluate data regarding users’ browsing behaviour on different websites. These data can be used to prepare statistical statements on demographic data and areas of interest of website users.\nWe expressly draw your attention to the fact that we cannot view data related to individual users and that the statistical data we use cannot be traced back to specific users.\nFor more information about Google’s terms of use and privacy, please visit:\n\t https://policies.google.com/privacy\n</string>
    <string name="terms_and_conditions_PPChanges_title">Privacy Policy Changes</string>
    <string name="terms_and_conditions_PPChanges_body">Although most changes are likely to be minor, UAB-IDT may change its Privacy Policy from time to time, and in UAB-IDT\'s sole discretion. 
UAB-IDT encourages visitors to frequently check this screen for any changes to its Privacy Policy. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.</string>
    <string name="explanation_title">How to use the app</string>
    <string name="explanation_preferences_title">Preference menu</string>
    <string name="explanation_preferences_body">The Preferences menu consists of 4 different sections:</string>
    <string name="explanation_preferences_first_scenario">Language: the app is available in four languages: Spanish, English, Portuguese and Italian. You can change the language of the app (except during the questionnaire response) on this screen.</string>
    <string name="explanation_preferences_second_scenario">How to use the app: it shows this explanation in the language active at that moment.</string>
    <string name="explanation_preferences_third_scenario">Terms and conditions: This screen shows the Terms and conditions of use of the app. This includes the Privacy policy.</string>
    <string name="explanation_preferences_fourth_scenario">About us: it contains the description of the RightsApp consortium and the available ways to contact the consortium.</string>
    <string name="explanation_howTo_title">How the app works</string>
    <string name="explanation_howTo_body">The app includes three different scenarios in which the user that has been victim of a crime within the European Union can found himself/herself. </string>
    <string name="explanation_howTo_first">First scenario: This scenario is the need to make an emergency call to 112. With just a push of a button the user can make an emergency call to 112.</string>
    <string name="explanation_howTo_second">Second scenario: This scenario is the need to be provided with information regarding rights of European Union citizens\' who have been victims of a crime. In order to obtain particularized information, the user has to fill in a small questionnaire (with a minimum of X and a maximum of Y questions). Once the user has answered this questionnaire, the rights that assist the user in her/his specific situation will appear grouped by subject (this grouping is due to the size of mobile devices’ screens, in order to facilitate the visualization). Once the title of any subject has been pressed, a more detailed definition of the rights that assist the user with respect to that subject will be displayed.\n</string>
    <string name="explanation_howTo_third">Third scenario: In the latter scenario the app provides the citizen who has been the victim of a crime with information regarding entities and centres that provide crime victim support. First, the user chooses three parameters to facilitate the search among these institutions and centres. The first parameter is the type of entity you are looking for, the second indicates in which country, and finally in which city. At the moment, only entities and centres that provide assistance to victims of crime in the Autonomous Community of Catalonia are available. Once these parameters are established, an ordered list will appear from less to more distant with respect to the user\'s location. Once one of the entities or assistance centres has been selected, the app will offer the possibility of calling that particular entity or centre, navigating to it (using GoogleMaps) or going back to carry out another search.</string>
    <string name="do_not_show">Do not show this message again</string>
    <string name="about">About us</string>
    <string name="ok">Accept</string>
    <string name="next">Continue</string>
    <string name="select_language">Select the new language</string>
    <string name="select_entity_type">Choose the entity type</string>
    <string name="select_entity_country">Choose the entity country</string>
    <string name="select_entity_city">Choose the entity city</string>
    <string name="phone">Phone</string>
    <string name="distance">Distance (in kms)</string>
    <string name="back">Back</string>
    <string name="link">Link</string>
    <string name="email">E-mail</string>
</resources>