<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/rightsapp_logo_50x84"
        android:title="@string/terms_and_conditions_title"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/settings_explanation"
        android:title="@string/explanation_title"
        app:showAsAction="never"/>
    <item android:id="@+id/settings_terms_conditions"
        android:title="@string/terms_and_conditions"
        app:showAsAction="never"/>
    <item android:id="@+id/settings_about_us"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
